@@ -17,7 +17,7 @@
       2014
     </year>
     <holder>
-      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.fsf.org/">FSF
+      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://www.fsf.org">FSF
       </link>
     </holder>
   </copyright>
