@@ -159,7 +159,7 @@ check the distribution terms of a manual before you buy it, and
 prefer copylefted manuals to non-copylefted ones.
 </para>
 <para>
-[Note: We now maintain a <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.fsf.org/licensing/doc/other-free-books.html">web page
+[Note: We now maintain a <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://www.fsf.org/licensing/doc/other-free-books.html">web page
 that lists free books available from other publishers</link>].
 </para>
 
