@@ -26,7 +26,7 @@
     <year>2016</year>
     <year>2017</year>
     <holder>
-      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.fsf.org">FSF</link>
+      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://www.fsf.org">FSF</link>
     </holder>
   </copyright>
 
