@@ -15,7 +15,7 @@
 
     <para>
       Copyright (C) 2008-2018
-      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="http://www.fsf.org/">FSF
+      <link xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="https://www.fsf.org">FSF
       </link>
     </para>
 
