@@ -1,5 +1,14 @@
 2018-03-19  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* doc/xml/api.xml: www.fsf.org has moved to https. Also omit
+	trailing slash for domain level link.
+	* doc/xml/faq.xml: Ditto.
+	* doc/xml/manual/appendix_free.xml (software): Ditto.
+	* doc/xml/manual/intro.xml: Ditto.
+	* doc/xml/manual/spine.xml: Ditto.
+	* doc/xml/spine.xml: Ditto.
+
+2018-03-19  Gerald Pfeifer  <gerald@pfeifer.com>	
 	* doc/xml/manual/documentation_hacking.xml: Adjust link to
 	docbook.org.
 
